Update LINK to Github

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="loading-circle"></div>
     <h2>Work in Progress</h2>
     <h1>
-      <a href="https://github.com/michaeltorresdev/michaeltorresdev.github.io"
+      <a href="https://github.com/MikixIT/Portfolio"
         >Michael Torres Portfolio</a
       >
     </h1>
